<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/round_bg_fff"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/notification"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#CFCFCF" />

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/tip_title"
        android:textColor="#666666"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#CFCFCF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/view_ad"
            android:textColor="#3a9be7"
            android:textSize="15sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#CFCFCF" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/trial"
            android:textColor="#3a9be7"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>